[resizer] Render last "grip" before the end of the table to prevent small horizontal overflow.

--- a/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datatable.scss
+++ b/to.etc.domui/src/main/resources/resources/themes/scss/winter/_datatable.scss
@@ -85,6 +85,8 @@ div.ui-dt > table {
 	font-weight: bold;
 	//font-size: 1rem;
 
+	@include overflow-ellipsis();
+
 	//background: $data_tbl_header_bg;
 	border-left: none !important;
 	border-right: none;
